# agent_legal_vn

./: .env.example  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
config/: settings.py
data/: corpus.json  crawl_data.py  law_ids.txt
src/embeddings/: embed_data.py
src/generation/: rag.py
src/indexing/: __init__.py  corpus_loader.py  qdrant_vdb.py
src/paralegal_agent/: event.py  main.py
src/paralegal_agent/config/: config.py
src/paralegal_agent/crews/: evaluate.py  rag.py
src/paralegal_agent/crews/config/: agent_evaluate.yaml  agents.yaml  task_evaluate.yaml  tasks.yaml
src/paralegal_agent/data/: crawl_data.py  document_loader.py  fix_title.py  ingest_data_with_gpu.ipynb  law_ids.txt  legal_splitter.py  save_document_to_jsonl.py  test_data.json  unit_merger.py
src/paralegal_agent/embeddings/: embed_data.py
src/paralegal_agent/indexing/: qdrant_vdb.py
src/paralegal_agent/provider/: llm_factory.py
src/paralegal_agent/provider/Huggingface/: qwen.py
src/paralegal_agent/provider/ollama/: phi3_5.py
src/paralegal_agent/retrieval/: retriever.py
src/paralegal_agent/tools/: firecrawl_search_tool.py
src/retrieval/: retriever.py
src/tools/: firecrawl_search_tool.py
src/workflows/: agent_workflow.py  event.py
